# speech-enhancement-cmgan

./: .gitignore  README.md  pyproject.toml
config/: metacentrum.yaml
src/enhancement/: evaluate.py  main.py
src/enhancement/dataset/: audio.py  loader.py  manager.py
src/enhancement/evaluation/: evaluator.py  metrics.py
src/enhancement/models/cmgan/: conformer.py  discriminator.py  generator.py  utils.py
src/enhancement/training/: test_trainer.py  trainer.py
src/enhancement/visualisation/: visualiser.py
templates/hpc/: metacentrum_template.sh
